--- a/BorgataJavaFx/src/main/java/poker/app/view/PokerTable.fxml
+++ b/BorgataJavaFx/src/main/java/poker/app/view/PokerTable.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="APMainScreen" prefHeight="600.0" prefWidth="1200.0" style="-fx-background-color: green;" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poker.app.view.PokerTableController">
+<AnchorPane fx:id="APMainScreen" prefHeight="622.0" prefWidth="1103.0" style="-fx-background-color: green;" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poker.app.view.PokerTableController">
    <children>
-      <BorderPane layoutY="-8.0" prefHeight="608.0" prefWidth="1185.0" style="-fx-background-color: green;">
+      <BorderPane prefHeight="691.0" prefWidth="1124.0" style="-fx-background-color: green;">
          <bottom>
-            <AnchorPane prefHeight="158.0" prefWidth="1193.0">
+            <AnchorPane prefHeight="165.0" prefWidth="1400.0">
                <children>
-                  <HBox layoutX="394.0" layoutY="4.0" prefHeight="150.0" prefWidth="420.0">
+                  <HBox layoutX="427.0" layoutY="5.0" prefHeight="136.0" prefWidth="420.0">
                      <children>
                         <GridPane prefHeight="21.0" prefWidth="315.0">
                           <columnConstraints>
@@ -48,9 +48,9 @@
             </AnchorPane>
          </bottom>
          <top>
-            <AnchorPane prefHeight="107.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="163.0" prefWidth="1400.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox layoutX="396.0" layoutY="11.0" prefHeight="151.0" prefWidth="414.0">
+                  <HBox layoutX="415.0" layoutY="13.0" prefHeight="144.0" prefWidth="414.0">
                      <children>
                         <GridPane prefHeight="21.0" prefWidth="315.0">
                            <columnConstraints>
@@ -75,9 +75,9 @@
             </AnchorPane>
          </top>
          <left>
-            <AnchorPane prefHeight="288.0" prefWidth="274.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="320.0" prefWidth="340.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox layoutX="28.0" layoutY="69.0" prefHeight="150.0" prefWidth="299.0">
+                  <HBox layoutX="5.0" layoutY="104.0" prefHeight="155.0" prefWidth="330.0">
                      <children>
                         <GridPane prefHeight="21.0" prefWidth="315.0">
                            <columnConstraints>
@@ -102,9 +102,9 @@
             </AnchorPane>
          </left>
          <right>
-            <AnchorPane prefHeight="358.0" prefWidth="403.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="363.0" prefWidth="499.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox layoutX="14.0" layoutY="69.0" prefHeight="150.0" prefWidth="300.0">
+                  <HBox layoutX="40.0" layoutY="104.0" prefHeight="155.0" prefWidth="330.0">
                      <children>
                         <GridPane prefHeight="21.0" prefWidth="654.0">
                            <columnConstraints>
@@ -129,15 +129,15 @@
             </AnchorPane>
          </right>
          <center>
-            <AnchorPane prefHeight="327.0" prefWidth="683.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="363.0" prefWidth="495.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox layoutX="35.0" layoutY="58.0" prefHeight="173.0" prefWidth="354.0">
+                  <HBox layoutX="33.0" layoutY="71.0" prefHeight="208.0" prefWidth="400.0">
                      <children>
                         <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="173.0" prefWidth="338.0" style="-fx-background-color: green;">
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="87.0" prefWidth="339.0" style="-fx-background-color: green;">
                                  <children>
-                                    <HBox fx:id="HboxCommunityCards" layoutX="11.0" prefHeight="68.0" prefWidth="317.0" style="-fx-background-color: green;" />
+                                    <HBox fx:id="HboxCommunityCards" layoutX="11.0" layoutY="1.0" prefHeight="99.0" prefWidth="317.0" style="-fx-background-color: green;" />
                                  </children></AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: green;">
                                  <children>
