--- a/BorgataJavaFx/src/main/java/poker/app/view/RootLayout.fxml
+++ b/BorgataJavaFx/src/main/java/poker/app/view/RootLayout.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="630.0" prefWidth="1133.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poker.app.view.RootLayoutController">
+<BorderPane prefHeight="712.0" prefWidth="1224.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poker.app.view.RootLayoutController">
    <top>
       <MenuBar prefHeight="35.0" prefWidth="150.0">
         <menus>
@@ -16,10 +16,10 @@
                         <ToggleGroup fx:id="tglGames" />
                      </toggleGroup></RadioMenuItem>
                   <RadioMenuItem mnemonicParsing="false" text="5 Card Wild Card Joker" toggleGroup="$tglGames" />
-                  <RadioMenuItem mnemonicParsing="false" text="5 Card Draw" toggleGroup="$tglGames" />
-                  <RadioMenuItem mnemonicParsing="false" text="7 Card Draw" toggleGroup="$tglGames" />
-                  <RadioMenuItem mnemonicParsing="false" text="Texas Hold'em" toggleGroup="$tglGames" />
-                  <RadioMenuItem mnemonicParsing="false" text="Omaha" toggleGroup="$tglGames" />
+                  <RadioMenuItem fx:id="fiveCardDraw" mnemonicParsing="false" text="5 Card Draw" toggleGroup="$tglGames" />
+                  <RadioMenuItem fx:id="sevenCardDraw" mnemonicParsing="false" text="7 Card Draw" toggleGroup="$tglGames" />
+                  <RadioMenuItem fx:id="Texas" mnemonicParsing="false" text="Texas Hold'em" toggleGroup="$tglGames" />
+                  <RadioMenuItem fx:id="Omaha" mnemonicParsing="false" text="Omaha" toggleGroup="$tglGames" />
                   <RadioMenuItem mnemonicParsing="false" text="Close" toggleGroup="$tglGames" />
             </items>
           </Menu>
